[package]
name = "qiunn_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
quinn = "0.9.3"
rustls = { version = "0.20.6" }
rustls-pemfile = "1.0.2"
serde_json = "1.0.140"
serde = {version="1.0.219", features = ["derive"]}
anyhow = "1.0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }